--- a/Web/chat.html
+++ b/Web/chat.html
@@ -23,8 +23,8 @@
         <script src="http://us.js2.yimg.com/us.js.yimg.com/lib/common/utils/2/connection_2.0.5.js"></script>
         <script src="json.js"></script>
         <script src="trace.js"></script>
-        <script src="connection.js"></script>
-        <script src="session.js"></script>
+        <script src="elko-connection.js"></script>
+        <script src="elko-session.js"></script>
         <script>
 
 String.prototype.entityify = function () {
@@ -47,7 +47,7 @@ document.getElementById('parameters').hidden = true;
         var contextReady = false;
         var users = [];
 
-        var session = ELKO.session();
+        var session = elkoSession.session();
         var ctxType = session.getType('context');
         ctxType.prototype.op_say = function(msg) {
             var user = users[msg.from];
