--- a/Web/chatjq.html
+++ b/Web/chatjq.html
@@ -25,8 +25,8 @@
 
         <script src="json.js"></script>
         <script src="trace.js"></script>
-        <script src="connectionjq.js"></script>
-        <script src="session.js"></script>
+        <script src="elko-connection.js"></script>
+        <script src="elko-session.js"></script>
         <script>
 
 String.prototype.entityify = function () {
@@ -49,7 +49,7 @@ document.getElementById('parameters').hidden = true;
         var contextReady = false;
         var users = [];
 
-        var session = ELKO.session();
+        var session = elkoSession.session();
         var ctxType = session.getType('context');
         ctxType.prototype.op_say = function(msg) {
             var user = users[msg.from];
